--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "crypto": "^1.0.1",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "fsevents": "^2.1.2",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.1",
@@ -29,11 +30,11 @@
     "node-gyp": "^5.0.7",
     "nodemailer": "^6.4.2",
     "nodemon": "^2.0.2",
+    "opentok": "^2.10.0",
     "otp-generator": "^1.1.0",
     "path": "^0.12.7",
     "pg": "^7.18.2",
-    "socket.io": "^2.3.0",
-    "fsevents": "^2.1.2"
+    "socket.io": "^2.3.0"
   },
   "optionalDependencies": {
     "fsevents": "^2.1.2"
