--- a/config/config.json
+++ b/config/config.json
@@ -2,5 +2,6 @@
     "name": "Support",
     "secret": "UVgridApp",
     "email": "support@xygen.co",
-    "password": "UVWorld@1"
+    "password": "UVWorld@1",
+    "broadcast":{}
 }
